--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,3 +8,13 @@ body {
 	justify-content: center;
 	flex-direction: column;
 }
+
+.titleImg {
+	margin-top: 30px;
+}
+
+@media (max-width: 600px) {
+	.titleImg {
+		width: 80%;
+	}
+}
